sandbox/output
StringCalculatorTest.java:31: error: incompatible types: String cannot be converted to Class<? extends Throwable>
    @Test(expected="NumberFormatException.class")
                   ^
1 error
